# LangGraph-Algo-System

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCH.md  KERNEL.md  TEST_CASES.md
mind/: ALGO_MANIFEST.json  UNMAPPED_LIST.json  __init__.py  chat.py  config.py  graph.py  ingest.py  knowledge_engine.py  slug_map.json  state.py
mind/nodes/: diagnosis.py  extractor.py  fetcher.py  format.py  gatekeeper.py  generator.py  mirror.py  rag.py  reviewer.py  summarizer.py  tutor.py
